@@ -1,0 +1,31 @@
+libdrm_etnaviv.so.1 libdrm-etnaviv1 #MINVER#
+ etna_bo_cpu_fini@Base 0
+ etna_bo_cpu_prep@Base 0
+ etna_bo_del@Base 0
+ etna_bo_dmabuf@Base 0
+ etna_bo_from_dmabuf@Base 0
+ etna_bo_from_name@Base 0
+ etna_bo_get_name@Base 0
+ etna_bo_handle@Base 0
+ etna_bo_map@Base 0
+ etna_bo_new@Base 0
+ etna_bo_ref@Base 0
+ etna_bo_size@Base 0
+ etna_cmd_stream_del@Base 0
+ etna_cmd_stream_finish@Base 0
+ etna_cmd_stream_flush@Base 0
+ etna_cmd_stream_new@Base 0
+ etna_cmd_stream_reloc@Base 0
+ etna_cmd_stream_timestamp@Base 0
+ etna_device_del@Base 0
+ etna_device_fd@Base 0
+ etna_device_new@Base 0
+ etna_device_new_dup@Base 0
+ etna_device_ref@Base 0
+ etna_gpu_del@Base 0
+ etna_gpu_get_param@Base 0
+ etna_gpu_new@Base 0
+ etna_pipe_del@Base 0
+ etna_pipe_new@Base 0
+ etna_pipe_wait@Base 0
+ etna_pipe_wait_ns@Base 0
